			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

===================================
VERSION 5.6.19 (September 20, 2006)
===================================

  * MODIFIED: More efficient DCG translation.  No longer produces 'C'/3
    calls.  'C'/3 has been moved to backcomp.pl

  * FIXED: Bug#205: support GNU-make when not named make.  Marc Espie.

  * FIXED: Bug 204: ** for rationals.  Mike Elston.

  * ADDED: Library heaps.pl.  Adapted by Markus Triska.

  * FIXED: Renamed depreciated --> deprecated.  Mike Elston.

================================
VERSION 5.6.18 (August 24, 2006)
================================

  * FIXED: format_time/3 can produce inconsistent results on first call.
    Keri Harris.

  * FIXED: Updated www_open_url for netscape compatible browsers on Unix.
    Cleanup of comments, etc.  Work-around lacking exit code of firefox
    -remote commands.

  * FIXED: Source-level debugger for a --> { x }, !, y.

  * FIXED: write_canonical(a|b).  Lukas Degener.

  * ADDED: Support for large integers in succ/2, plus/3 and between/3.
    Bart Demoen.

  * FIXED: Domain error on random/1.   Lukas Degener.

  * FIXED: pl-tai.c portability problem for Solaris (asctime_r). 
    Hazita Harun.

  * FIXED: Bug#192: reading non-decimal numbers that cause a 64-bit int
    overflow.  Marius Filip.

  * ENHANCED: Bug#195: library(debug) to compile debugging(x) to fail when -O
    is active.  Holger Kanwischer.

  * ADDED: print_message(silent, toplevel_goal(Goal, Bindings)) to allow
    intercepting toplevel goals just before they are executed.  Some
    cleanup to toplevel.pl and topvars.pl

  * FIXED: possible crash freeing a thread that could not be created
    due to conflicting alias.
