@@ -7,6 +7,8 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: between(N, infinite, X).  Matt Lilley.
+
 ===================================
 VERSION 5.6.19 (September 20, 2006)
 ===================================
